增加系统故障统计功能

--- a/doc/satellites.yaml
+++ b/doc/satellites.yaml
@@ -99,6 +99,15 @@ satellites:
       gyro_b_bias:
         code: "TMKP631,TMKP632,TMKP633"
         desc: "陀螺B零偏估计(X,Y,Z)"
+
+# --- 系统级状态监视 (System Status) ---
+      control_mode:
+        code: "TMKP040"
+        desc: "姿态控制模式 (5=安全模式)"
+        
+      error_log_count:
+        code: "TMKR012"
+        desc: "错误日志计数"
   # ----------------------------------------------------------------------------
   # 卫星标识: XW04 (示例卫星)
   # ----------------------------------------------------------------------------
