增加星务状态评估功能

--- a/doc/satellites.yaml
+++ b/doc/satellites.yaml
@@ -104,36 +104,19 @@ satellites:
       control_mode:
         code: "TMKP040"
         desc: "姿态控制模式 (5=安全模式)"
-        
+
       error_log_count:
         code: "TMKR012"
         desc: "错误日志计数"
-  # ----------------------------------------------------------------------------
-  # 卫星标识: XW04 (示例卫星)
-  # ----------------------------------------------------------------------------
-  XW04:
-    name: "XW-04"
-    aliases: ["XW_04", "XW04", "XW 04"]
-    db_table: "XW_04"
-    telemetry:
-      status: { code: "TMKP500,TMKP501", desc: "状态标志|温度" }
-
-  # ----------------------------------------------------------------------------
-  # 卫星标识: ZQ01 (示例卫星)
-  # ----------------------------------------------------------------------------
-  ZQ01:
-    name: "ZQ-01"
-    aliases: ["ZQ_01", "ZQ01"]
-    db_table: "ZQ_01"
-    telemetry:
-      power_temp: { code: "TMKP600", desc: "电源温度" }
-
-  # ----------------------------------------------------------------------------
-  # 卫星标识: YX02 (遥测二号)
-  # ----------------------------------------------------------------------------
-  YX02:
-    name: "遥测二号"
-    aliases: ["YX_02", "YX-2", "YX02"]
-    db_table: "YX_02"
-    telemetry:
-      power_metrics: { code: "TMKP700,TMKP701,TMKP702", desc: "电源|电流|电压" }
+# --- 星务分系统 (OBDH Subsystem) ---
+      obdh_resets:
+        code: "TMHC012,TMHC013,TMHC014,TMHC015,TMHC016"
+        desc: "分区1复位,分区2复位,分区3复位,置位复位,总复位"
+      obdh_bus_errors:
+        # 包含了 PCU(A/B), 应答机A(B), 应答机B(B), SMU(B) 的错误计数
+        code: "TMH2003,TMH2004,TMH2007,TMH2008,TMH2015,TMH2016,TMH2023,TMH2024,TMH2031,TMH2032"
+        desc: "PCU总线A应答错,PCU总线A请求错,PCU总线B应答错,PCU总线B请求错,应答机A总线B请求错,应答机A总线B应答错,应答机B总线B请求错,应答机B总线B应答错,SMU总线B请求错,SMU总线B应答错"
+        # --- 星务热控管理 (OBDH Thermal Management) ---
+      obdh_thermal_manage:
+        code: "TMH4308,TMH4309,TMH4311,TMH4315,TMH4316"
+        desc: "自主测温点替换次数,被替测温点加热器索引,废弃加热器数量,最近输出热控通道号,最近废弃加热器索引"
